<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DummyWindow</class>
 <widget class="QMainWindow" name="DummyWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1339</width>
    <height>907</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Ilastik Classification Workflow</string>
  </property>
  <widget class="QWidget" name="dummy"/>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1339</width>
     <height>21</height>
    </rect>
   </property>
   <property name="nativeMenuBar">
    <bool>false</bool>
   </property>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>&amp;View</string>
    </property>
    <addaction name="actionFitToScreen"/>
    <addaction name="actionToggleAllHuds"/>
    <addaction name="actionResetAllAxes"/>
    <addaction name="actionCenterAllImages"/>
    <addaction name="actionShowDebugPatches"/>
    <addaction name="actionSetCacheSize"/>
    <addaction name="actionUsePrefetching"/>
    <addaction name="actionBlockGui"/>
    <addaction name="separator"/>
    <addaction name="actionOnly_for_current_view"/>
    <addaction name="actionFitImage"/>
    <addaction name="actionToggleSelectedHud"/>
    <addaction name="actionResetAxes"/>
    <addaction name="actionCenterImage"/>
    <addaction name="actionReset_zoom"/>
   </widget>
   <addaction name="menuView"/>
  </widget>
  <action name="actionOpenFile">
   <property name="icon">
    <iconset>
     <normaloff>icons/document-open.png</normaloff>icons/document-open.png</iconset>
   </property>
   <property name="text">
    <string>&amp;Open File</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionFitToScreen">
   <property name="icon">
    <iconset>
     <normaloff>icons/view-fullscreen.png</normaloff>icons/view-fullscreen.png</iconset>
   </property>
   <property name="text">
    <string>&amp;Zoom to &amp;fit</string>
   </property>
   <property name="toolTip">
    <string>Fit all</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionQuit">
   <property name="icon">
    <iconset>
     <normaloff>icons/process-stop.png</normaloff>icons/process-stop.png</iconset>
   </property>
   <property name="text">
    <string>&amp;Quit</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionShowDebugPatches">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>&amp;Show Tiling</string>
   </property>
   <property name="iconVisibleInMenu">
    <bool>false</bool>
   </property>
  </action>
  <action name="actionToggleAllHuds">
   <property name="text">
    <string>Toggle huds</string>
   </property>
   <property name="toolTip">
    <string>Hide or show all huds</string>
   </property>
  </action>
  <action name="actionOnly_for_current_view">
   <property name="enabled">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Only for selected view</string>
   </property>
   <property name="font">
    <font>
     <weight>75</weight>
     <italic>true</italic>
     <bold>true</bold>
    </font>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionFor_all_axis">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>For all axis</string>
   </property>
   <property name="font">
    <font>
     <weight>75</weight>
     <italic>true</italic>
     <bold>true</bold>
     <strikeout>false</strikeout>
    </font>
   </property>
   <property name="menuRole">
    <enum>QAction::TextHeuristicRole</enum>
   </property>
  </action>
  <action name="actionToggleSelectedHud">
   <property name="text">
    <string>Toggle hud</string>
   </property>
   <property name="toolTip">
    <string>toggle selected hud</string>
   </property>
  </action>
  <action name="actionCenterAllImages">
   <property name="text">
    <string>Center Images</string>
   </property>
  </action>
  <action name="actionCenterImage">
   <property name="text">
    <string>Center Image</string>
   </property>
  </action>
  <action name="actionFitImage">
   <property name="text">
    <string>Fit image</string>
   </property>
   <property name="toolTip">
    <string>fit image into view</string>
   </property>
  </action>
  <action name="actionReset_zoom">
   <property name="text">
    <string>Reset zoom</string>
   </property>
   <property name="toolTip">
    <string>reset zoom</string>
   </property>
  </action>
  <action name="actionOpenStack">
   <property name="icon">
    <iconset>
     <normaloff>icons/document-open.png</normaloff>icons/document-open.png</iconset>
   </property>
   <property name="text">
    <string>Open &amp;Stack</string>
   </property>
  </action>
  <action name="actionSetCacheSize">
   <property name="text">
    <string>Set Layer Cache Size</string>
   </property>
  </action>
  <action name="actionResetAllAxes">
   <property name="text">
    <string>Reset all axes</string>
   </property>
  </action>
  <action name="actionResetAxes">
   <property name="text">
    <string>Reset axes</string>
   </property>
  </action>
  <action name="actonPrefetchingDisabled">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Disabled</string>
   </property>
  </action>
  <action name="action">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Enabled</string>
   </property>
  </action>
  <action name="actionUsePrefetching">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Use Prefetching</string>
   </property>
   <property name="toolTip">
    <string>Cache slices nearby such that they display faster when scrolling through a volume (needs more memory)</string>
   </property>
  </action>
  <action name="actionBlockGui">
   <property name="text">
    <string>Block for rendering</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
